# FractalExplore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.py  main.cpp  run.bat
assets/shaders/: default.frag  default.vert  mandelbrot.frag  mandelbrot.vert  test.frag  test.vert
dependencies/glfw/: cmake_uninstall.cmake
dependencies/glfw/src/: glfw3.pc  glfw3ConfigVersion.cmake
fractal/src/: main.cpp  math.cpp  math.h
include/: arbitrary.hpp  camera.h  camera.hpp  external.h  fractal.h  fractalrenderer.hpp  framebuffer.h  framebuffer.hpp  graphics.hpp  listener.hpp  renderer.h  renderer.hpp  shader.h  shader.hpp  util.h  util.hpp  window.h  window.hpp
include/assets/: icon.hpp
include/core/: arbitrary.hpp  camera.hpp  listener.hpp  window.hpp
include/graphics/: fractal.hpp  framebuffer.hpp  postprocessing.hpp  renderer.hpp  shader.hpp  texture.hpp
include/programs/: colormap.hpp  fractal.hpp  program.hpp  transformation.hpp
include/shaders/: burningship.hpp  fractal.hpp  hsv.hpp  mandelbrot.hpp
src/: arbitrary.cpp  camera.c  camera.cpp  fractal.cpp  fractalrenderer.cpp  framebuffer.cpp  listener.c  listener.cpp  main.cpp  renderer.c  renderer.cpp  shader.cpp  texture.cpp  util.c  window.c  window.cpp
src/colormaps/: grayscale.cpp  hsv.cpp  sunset.cpp
src/colors/: grayscale.cpp  hsv.cpp  sunset.cpp
src/core/: arbitrary.cpp  camera.cpp  listener.cpp
src/fractals/: burningship.cpp  mandelbrot.cpp  mengersponge.cpp
src/graphics/: framebuffer.cpp  renderer.cpp  shader.cpp  texture.cpp
src/postprocessing/: grayscale.cpp  hsv.cpp  sunset.cpp
src/programs/: program.cpp
src/programs/colormaps/: grayscale.cpp  hsv.cpp  sunset.cpp
src/programs/fractals/: burningship.cpp  julia.cpp  mandelbrot.cpp  sierpinski_carpet.cpp
src/programs/transformations/: none.cpp  sinewave.cpp
src/shaders/: burningship.cpp  mandelbrot.cpp
